@@ -11,6 +11,7 @@ Version 1.3.14+svn:
      (bug #9538)
  * user interface:
    * Made ESC clear hotkey when changing hotkeys
+   * Made quick replay skip messages
    * linger mode overlay is also drawn over fog and shroud (bug #10811)
  * miscellaneous and bug fixes:
    * Fixed boost test compile with 1.34.1
@@ -20,6 +21,7 @@ Version 1.3.14+svn:
      usefull
    * converted NO_MAP_DATA to new map format
    * fixed unchecked vector access
+   * fixed weapon_specials filter_opponent to work in attack selection (bug #8333)
    * added a more graceful handling of maps without a header (bug #10787)
    * make sure the python campaign client list shows a space between the 
      headers if the size of the column is smaller than the header (eg uploads)
